test/bad/automatic/extension/class/compile_time/0019.lat
class class {
  int andrzej;
}

int main() {
  class janusz = new class;
  return janusz.andrzej;
}
